--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ td.center, th.center{text-align:center}
     <div class="divider"></div>
 
     <div class="card">
-      <h1 style="text-align:center;">Budget Settings</h1>
+      <h1 style="text-align:center;">Budget</h1>
       
       <div style="display:flex;flex-direction:column;gap:10px;margin-top:10px;">
         <button id="settingsOpenEditBudgetsBtn" class="secondary" type="button">Edit Budget Amounts</button>
